Remove asgmtType and change date format
